2002-12-16  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* pthread-threads.c, pthread-threads.h, threads.c: Fixes to
	pthread "native" recursive mutex support.

2002-12-15  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* __scm.h (SCM_DEFER_INTS, SCM_ALLOW_INTS): New definitions.
	Simply lock a thread C API recursive mutex.
	(SCM_NONREC_CRITICAL_SECTION_START,
	SCM_NONREC_CRITICAL_SECTION_END, SCM_REC_CRITICAL_SECTION_START,
	SCM_REC_CRITICAL_SECTION_END): Removed.

	* eval.c: Replaced SOURCE_SECTION_START / SOURCE_SECTION_END with
	direct calls to scm_rec_mutex_lock / unlock around the three calls
	to scm_m_expand_body.

	* eval.c, eval.h (promise_free): New function.
	(scm_force): Rewritten;  Now thread-safe; Removed
	SCM_DEFER/ALLOW_INTS.

	* pthread-threads.h: Added partially implemented plugin interface
	for recursive mutexes.  These are, for now, only intended to be
	used internally within the Guile implementation.

	* pthread-threads.c: New file.

	* threads.c: Conditionally #include "pthread-threads.c".

	* eval.c, eval.h (scm_makprom, scm_force): Rewritten to be
	thread-safe;

	* snarf.h (SCM_MUTEX, SCM_GLOBAL_MUTEX, SCM_REC_MUTEX,
	SCM_GLOBAL_REC_MUTEX): New macros.

	* eval.c, threads.c, threads.h, snarf.h: Rewrote critical section
	macros---use mutexes instead.

	* tags.h (SCM_IM_FUTURE): New tag.

	* eval.c (scm_m_future): New primitive macro.
	(SCM_CEVAL): Support futures.
	(unmemocopy): Support unmemoization of futures.

	* print.c (scm_isymnames): Name of future isym.

	* version.c: Unmade some changes to my private copy that got
	committed by mistake.

2002-12-11  Mikael Djurfeldt  <mdj@kvast.blakulla.net>

	* gc-malloc.c, gc.h, init.c: Reverted gc-malloc change of
	2002-12-10.

	* gc.c (scm_igc): Don't call scm_i_thread_invalidate_freelists.

	* gc.c (scm_gc_sweep): Call it here instead, which is a more
	logical place.

	* threads.c (create_thread): Remember root object until the handle
	of the new thread is on all_threads list.
